--- a/main.css
+++ b/main.css
@@ -90,10 +90,11 @@
 .infos > div {
     display: flex;
     margin: 1em;
+    width: 100%;
 }
 
 .infos > div > img {
-    width: 20%;
+    width: 30%;
     margin: 1em;
 }
 
@@ -118,10 +119,11 @@
     width: 15%;  
     height: 55%;
     background-color: #fce8f6;
-    text-align: centerwhite;
+    text-align: center;
     padding: 1%;
+    font-size: 0.9em;
+}
 
-    font-size: 0.9em;}
 .info-time > .div-interna {
     background-color: white;
     height:35px;
@@ -143,7 +145,7 @@
     font-weight:bolder;
     margin-top:5%;
     margin-bottom:10%;
-   display: flex;
+    display: flex;
 }
 
 .corpo-relatorio-2 {
@@ -158,8 +160,15 @@
     font-size: 1.5em;
 }
 
+.corpo-relatorio {
+    display: flex;
+}
+
 .corpo-relatorio > div > hr {
     width: 100%;
+    display: flex;
+
+    
 }
 
 .info-contratos {
